--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,33 @@
 /*CSS style sheet*/
 
 #main-wrapper{
-    width:500px;
-    margin: 0 auto;
-    background:#f1c40f;
-    padding:5px;
-    border-radius:10px;
-    border: 2px solid rgb(48, 63, 159);
+	height: fit-content;
+	width: 35%;
+	margin: 0 auto;
+	background: #f1c40f;
+	padding: 35px;
+	border-radius: 100px;
+	border: 10px solid rgb(48, 63, 159);
 }
+
+
+
+.text_no_wrap{
+    white-space : nowrap;
+}
+
 .avatar{
 	width: 100px;
 	text-align: center;
 
 }
 .myform{
-	width:450px;
+	width:70%px;
 	margin:0 auto;
+	
 }
 .inputvalues{
-	width: 450px;
+	width: 130px;
 	margin: 0 auto;
 	padding: 5px;
 }
@@ -27,7 +36,7 @@
 	background-color:rgb(48, 63, 159) ;
 	padding:5px;
 	color:  #f1c40f;
-	width: 103%;
+	width: 100px%;
 	text-align: center;
 	font-size: 18px;
 	font-weight: bold;
@@ -38,7 +47,7 @@
 	background-color:rgb(48, 63, 159) ;
 	padding:5px;
 	color:  #f1c40f;
-	width: 103%;
+	width: 100px;
 	text-align: center;
 	font-size: 18px;
 	font-weight: bold;
@@ -48,7 +57,7 @@
 	background-color:rgb(48, 63, 159) ;
 	padding:5px;
 	color:  #f1c40f;
-	width: 103%;
+	width: 75%;
 	text-align: center;
 	font-size: 18px;
 	font-weight: bold;
@@ -59,7 +68,7 @@
 	background-color:rgb(48, 63, 159) ;
 	padding:5px;
 	color:  #f1c40f;
-	width: 103%;
+	width: 75%;
 	text-align: center;
 	font-size: 18px;
 	font-weight: bold;
